Terminada primera fase

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,6 +2,21 @@
   <ion-content padding="true" class="manual-ios-statusbar-padding">
     <h1 id="login-heading1" style="color:#000000;text-align:center;">ARC</h1>
     <h5 id="login-heading2" style="color:#000000;text-align:center;">Averigua , Registra y Compara</h5>
-    <a class="button button-positive button-block icon-left ion-social-facebook" ng-click="entrar()">Entrar</a>
+    <a class="button button-positive button-block icon-left ion-social-facebook" ng-click="facebook()">Entrar</a>
+    <div class="list">
+	  <label class="item item-input">
+	    <span class="input-label">Usuario</span>
+	    <input type="text" ng-model="usuario.nombre">
+	  </label>
+	  <label class="item item-input">
+	    <span class="input-label">Contraseña</span>
+	    <input type="password" ng-model="usuario.clave">
+	  </label>
+	  <div class="row">
+	  	<a class="button button-positive button-block col-50" ng-click="entrar()">Iniciar sesion</a>
+	  	<a class="button button-positive button-block col-50" ng-click="registrar()">Registrarse</a>
+	  </div>
+	  
+	</div>
   </ion-content>
 </ion-view>
