--- a/www/templates/item.html
+++ b/www/templates/item.html
@@ -3,9 +3,10 @@
     <button class="button button-icon icon ion-android-checkmark-circle" ng-click="guardar()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <div ng-if="articulo" style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;" ng-click="capturar()">
+    <div ng-if="articulo && !articulo.has('foto')" style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;" ng-click="capturar()">
       <i class="icon ion-plus" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
     </div>
+    <img ng-if="articulo && articulo.has('foto')" ng-src="{{articulo.get('foto').url()}}" style="width: 100%" ng-click="capturar()" >
     <form id="item-form3" class="list">
       <label class="item item-input" id="item-input2">
         <span class="input-label">Marca</span>
