--- a/www/templates/items.html
+++ b/www/templates/items.html
@@ -6,14 +6,11 @@
     <a class="button button-icon icon ion-android-add" href="#/articulo/{{lista.id}}/"></a>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
-    <div>
-      <a class="item ite-body" ng-repeat="articulo in articulos" href="#/articulo/{{lista.id}}/{{articulo.id}}">
-        <img ng-if="articulo.contains('imagen')" ng-src="{{articulo.get('imagen')}}">
-        <h2>{{articulo.get('marca')}}</h2>
-        <p>{{articulo.get('precio')}}</p>
-      </a>
-      
-    </div>
+    <a class="item item-body" ng-repeat="articulo in articulos" href="#/articulo/{{lista.id}}/{{articulo.id}}">
+      <img ng-if="articulo.has('foto')" ng-src="{{articulo.get('foto').url()}}" style="max-height: 100px" align="middle">
+      <h2 style="text-align: center;">{{articulo.get('marca')}}</h2>
+      <p style="text-align: center;">{{articulo.get('precio')}}</p>
+    </a>
   </ion-content>
 </ion-view>
 
