--- a/www/templates/tuLista.html
+++ b/www/templates/tuLista.html
@@ -3,16 +3,19 @@
     <button class="button button-icon icon ion-plus" ng-click="nuevo()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
+    <a class="ion-share item" ng-click="compartir()"> Compartir</a>
     <label class="item item-input" id="tuLista-search1">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="search" placeholder="Buscar">
     </label>
     <div class="list" >
-      <a class="item item-icon-right" ng-repeat="lista in listas" href="#/articulos/{{lista.id}}">
-        <h2>{{lista.get('nombre')}}</h2>
-        <p>{{lista.get('descripcion')}}</p>
-        <i class="button button-icon icon ion-trash-a" ng-click="borrar($index)"></i>
-      </a>
+      <div class="row" ng-repeat="lista in listas" >
+        <a class="item col-90" href="#articulos/{{lista.id}}">
+          <h2>{{lista.get('nombre')}}</h2>
+          <p>{{lista.get('descripcion')}}</p>
+        </a>
+        <i class="button button-icon icon ion-trash-a" ng-click="borrar($index)" style="align-self: center;"></i>
+      </div>
     </div>
   </ion-content>
 </ion-view>
