--- a/www/templates/tuLista.html
+++ b/www/templates/tuLista.html
@@ -1,20 +1,20 @@
-<ion-view title="Tu lista" hide-back-button="true" id="page2">
-  <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-icon icon ion-plus" ng-click="nuevo()"></button>
+<ion-view title="Tu lista" hide-back-button="true">
+  <ion-nav-buttons side="right" class="has-header" >
+    <button  ng-if="esUsuario" class="button button-icon icon ion-plus" ng-click="nuevo()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <a class="ion-share item" ng-click="compartir()"> Compartir</a>
     <label class="item item-input" id="tuLista-search1">
       <i class="icon ion-search placeholder-icon"></i>
-      <input type="search" placeholder="Buscar">
+      <input type="search" placeholder="Buscar" ng-model="buscar">
     </label>
     <div class="list" >
-      <div class="row" ng-repeat="lista in listas" >
+      <div class="row" ng-repeat="lista in listas | listafilter:buscar" >
         <a class="item col-90" href="#articulos/{{lista.id}}">
           <h2>{{lista.get('nombre')}}</h2>
           <p>{{lista.get('descripcion')}}</p>
         </a>
-        <i class="button button-icon icon ion-trash-a" ng-click="borrar($index)" style="align-self: center;"></i>
+        <i ng-if="esUsuario" class="button button-icon icon ion-trash-a" ng-click="borrar($index)" style="align-self: center;"></i>
       </div>
     </div>
   </ion-content>
