Cambiado icono y color del actionbar

--- a/www/templates/item.html
+++ b/www/templates/item.html
@@ -1,7 +1,11 @@
 <ion-view title="Item" id="page5">
-  <ion-nav-buttons side="right" class="has-header" >
-    <button ng-if="esUsuario" class="button button-icon icon ion-android-checkmark-circle" ng-click="guardar()"></button>
-  </ion-nav-buttons>
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-back-button></ion-nav-back-button>
+    <ion-nav-buttons side="right" class="has-header" >
+      <button ng-if="esUsuario" class="button button-icon icon ion-android-checkmark-circle" ng-click="guardar()"></button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
+  
   <ion-content padding="true" class="has-header">
     <div ng-if="articulo && !articulo.has('foto')" style="margin: 0px; line-height: 250px; background-color: rgb(232, 235, 239); text-align: center;" ng-click="capturar()">
       <i class="icon ion-plus" style="font-size: 64px; color: rgb(136, 136, 136); vertical-align: middle;"></i>
