--- a/www/templates/nuevaLista.html
+++ b/www/templates/nuevaLista.html
@@ -1,5 +1,7 @@
 <ion-view title="Nueva lista" id="page3">
-  
+  <ion-nav-bar class="bar-positive">
+    <ion-nav-back-button></ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content padding="true" class="has-header">
     <form id="nuevaLista-form2" class="list">
       <label class="item item-input" id="nuevaLista-input1">
