--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -2,8 +2,9 @@
 // Colors
 // -------------------------------
 
+
 $light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
+$stable:                          #00687A !default;
 $positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #33cd5f !default;
